@@ -6,6 +6,14 @@
     text-decoration: none;
 }
 
+#instructions {
+    margin: auto;
+    width: 30%;
+    padding: 5px;
+    margin-bottom: 20px;
+    border: 3px solid black;
+}
+
 #gameWrapper {
     margin: auto;
     min-width: 550px;
