@@ -6,6 +6,10 @@
         <link href='css/styles.css' type='text/css' rel='stylesheet'>
 	</head>
 	<body>
+        <div id='instructions'>
+            <h2>Instructions:</h2>
+            <h4>- Rapidly click the square in the middle to attack the enemy<br>- Use SP (Slayer Points) you earn to buy upgrades<br>- Reach 10,000 Exp to win</h4>
+        </div>
         <div id='gameWrapper'>
             <div id='statsMenu'>
                 <div id='actionStats'>
